--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,5 +27,15 @@ services:
       RABBITMQ_DEFAULT_USER: "admin"
       RABBITMQ_DEFAULT_PASS: "yourmqpasswordhere"
       RABBITMQ_DEFAULT_VHOST: "/"
-#    volumes:
-#      - ./rabbitmq/rabbitmq.config:/etc/rabbitmq/rabbitmq.config:ro
+  #    volumes:
+  #      - ./rabbitmq/rabbitmq.config:/etc/rabbitmq/rabbitmq.config:ro
+
+  redis:
+    hostname: localhost
+    container_name: redis
+    image: redis
+    ports:
+      - 6379:6379
+    restart: always
+    volumes:
+      - ./data:/data
